# command-lines

./: .clippy.toml  .rustfmt.toml  Cargo.toml  build.rs  build_util.rs  his.li  index.html  test.html
crates/local-server/: Cargo.toml
crates/local-server/src/: lib.rs
crates/local-server/src/elements/: base.rs  div.rs  mod.rs  node.rs  span.rs
crates/local-server/src/types/: mod.rs
crates/logic-core/: Cargo.toml
crates/logic-core/src/: lib.rs  progress_bar.rs  tips.rs
crates/logic-core/src/tips/: load_file.rs
examples/: demo.rs  editor.rs  node.rs  test.rs  utils.rs
src/: lib.rs  main.rs
src/editor/: mod.rs
src/html/: fold_icon.rs  node.rs
src/macro_core/: core.rs  mod.rs  test.rs
src/server/: http.rs
src/service/: response.rs
src/tools/: mod.rs  response_parts.rs  tokiort.rs
static/: 404.html  nothing.html
temp_static/: 404.html
