[workspace]
members = ["crates/*"]

[workspace.dependencies]
crossterm = { path = "../crossterm-master" }
hyper = "1.6.0"
tokio = "1.45.1"

[package]
name = "command-lines"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { workspace = true }
crossterm = { workspace = true }
logic-core = { path = "crates/logic-core" }
tokio = { workspace = true, features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
  "net",
] }
http-body-util = "0.1.3"
bytes = "1.10.1"


[[example]]
path = "./examples/demo.rs"
name = "deo"
