[workspace]
members = ["crates/*"]

[workspace.dependencies]
crossterm = { path = "../crossterm-master" }
hyper = "1.6.0"
tokio = "1.45.1"

[package]
name = "command-lines"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
logic-core = { path = "crates/logic-core" }
http-body-util = "0.1.3"
bytes = "1.10.1"
pin-project-lite = "0.2.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.tokio]
workspace = true
features = ["rt", "macros", "time", "rt-multi-thread", "net"]

[dependencies.hyper]
workspace = true
features = ["server", "http1"]

[build-dependencies]
chrono = "0.4.41"

[[example]]
path = "./examples/demo.rs"
name = "deo"
